--- a/mHandler.cls
+++ b/mHandler.cls
@@ -13,8 +13,8 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = True
 ' Generic Handler
 Option Explicit
-Public objref As Object
-Public t1 As Variant, indirect As Long
+Private mObjRef As Object
+Private mt1 As Variant, mindirect As Long
 Public ReadOnly As Boolean
 Public index_start As Variant ' 1 for start
 Public index_End As Variant  ' -1 for end
@@ -22,7 +22,15 @@ Public index_cursor As Variant
 Public sign As Variant
 Public UseIterator As Boolean
 Public oEnum As Variant
-Public IamEnum As Boolean
+Private mIamEnum As Boolean
+Friend Property Get objref() As Object
+    Set objref = mObjRef
+End Property
+
+Friend Property Set objref(RHS As Object)
+    Set mObjRef = RHS
+End Property
+
 Private Sub Class_Initialize()
 indirect = -1
 index_start = 0
@@ -38,12 +46,10 @@ If Not objref Is Nothing Then
 Set objref = Nothing
 End If
 End Sub
-Public Sub CopyTo(a As mHandler)
+Friend Sub CopyTo(a As mHandler)
 If IamEnum Then Set a = Me: Exit Sub
 Set a = New mHandler
 a.t1 = t1
-''A.Par1 = Par1   ' key or index ???
-' no copy for reference
 If t1 = 1 Then a.ReadOnly = ReadOnly
 a.indirect = indirect
 a.index_start = index_start
@@ -51,26 +57,49 @@ a.index_End = index_End
 a.index_cursor = index_cursor
 a.UseIterator = UseIterator
 a.sign = sign
-Set a.objref = objref
+Set a.objref = mObjRef
 End Sub
-Public Function Iterate()
+Friend Function Iterate()
         Iterate = GetNext(ObjPtr(oEnum), index_cursor)
-        If IsObject(index_cursor) Then Set objref = index_cursor: index_cursor = vbEmpty
+        If IsObject(index_cursor) Then Set mObjRef = index_cursor: index_cursor = vbEmpty
         index_End = 1
         If Not Iterate Then index_End = -1
 End Function
-Sub ConstructEnumerator(penum As Variant)
+Friend Sub ConstructEnumerator(penum As Variant)
 IamEnum = True
 Set oEnum = penum
 If GetNext(ObjPtr(penum), index_cursor) Then
-If IsObject(index_cursor) Then Set objref = index_cursor: index_cursor = vbEmpty
+If IsObject(index_cursor) Then Set mObjRef = index_cursor: index_cursor = vbEmpty
     index_End = 0
 End If
 End Sub
 Friend Function CreateFromPicture(b As Long, w1 As Long, w2 As Long, w3 As Long) As Object
 If t1 = 2 Then
 Dim mm As MemBlock
-Set mm = objref
+Set mm = mObjRef
 Set CreateFromPicture = mm.CreateFromPicture(b, w1, w2, w3)
 End If
 End Function
+
+Property Get t1() As Variant
+t1 = mt1
+End Property
+
+Friend Property Let t1(ByVal RHS As Variant)
+mt1 = RHS
+End Property
+
+Property Get indirect() As Long
+indirect = mindirect
+End Property
+
+Friend Property Let indirect(ByVal RHS As Long)
+mindirect = RHS
+End Property
+Property Get IamEnum() As Boolean
+IamEnum = mIamEnum
+End Property
+
+Friend Property Let IamEnum(ByVal RHS As Boolean)
+mIamEnum = RHS
+End Property
