--- a/FastCollection.cls
+++ b/FastCollection.cls
@@ -17,7 +17,7 @@ Option Explicit
 ' Key as string may be a hex number (used for enumarates)
 ' zero$ has chr$(1)
 Const Zero$ = ""
-Private Declare Function CompareString Lib "KERNEL32" Alias "CompareStringW" (ByVal Locale As Long, ByVal dwCmpFlags As Long, ByVal lpString1 As Long, ByVal cchCount1 As Long, ByVal lpString2 As Long, ByVal cchCount2 As Long) As Long
+Private Declare Function CompareString Lib "kernel32" Alias "CompareStringW" (ByVal Locale As Long, ByVal dwCmpFlags As Long, ByVal lpString1 As Long, ByVal cchCount1 As Long, ByVal lpString2 As Long, ByVal cchCount2 As Long) As Long
 Public NowDec$
 ' No same key. --- this is changed
 Private AllowSameKey As Boolean
@@ -50,7 +50,7 @@ Private AllowSameKey As Boolean
 '* .Frwd  (for index, exit if not .done)
 '* .Back  (for index, exit if not .done)
 Private mSortstyle As VbCompareMethod
-Private Declare Sub CopyMemory Lib "KERNEL32" Alias "RtlMoveMemory" ( _
+Private Declare Sub CopyMemory Lib "kernel32" Alias "RtlMoveMemory" ( _
     lpvDest As Any, lpvSource As Any, ByVal cbCopy As Long)
 Private Type item
     Key As String
@@ -72,7 +72,7 @@ Private lasttype As Integer
 Private lastkey As String
 Private Hash() As Long
 Public Done As Boolean
-Public index As Long
+Public Index As Long
 Public StructLen As Long
 Private ParentIndex As Long
 Public NumericSort As Boolean
@@ -112,7 +112,7 @@ End Sub
 
 Public Sub AddKey2(RHS, Optional aValue As Variant)
 IamBusy = True
-    index = -1
+    Index = -1
     
     lastkey = Normalize(RHS)
     If Len(lastkey) = 0 Then RHS = Chr$(0) + Chr$(0) + Chr$(0) + Chr$(0): lastkey = RHS
@@ -134,7 +134,7 @@ IamBusy = True
 IamBusy = False
 End Sub
 Public Sub AddKey(RHS, Optional aValue As Variant)
-    index = -1
+    Index = -1
     
      lastkey = Normalize(RHS)
  
@@ -152,10 +152,10 @@ Public Sub AddKey(RHS, Optional aValue As Variant)
         End If
     Else
         Value = aValue
-        If index >= 0 Then
-        PriveSpace(index).KeyType = lasttype
+        If Index >= 0 Then
+        PriveSpace(Index).KeyType = lasttype
         Else
-        PriveSpace(index).KeyType = 0 ' invalid
+        PriveSpace(Index).KeyType = 0 ' invalid
         End If
     End If
 End Sub
@@ -224,26 +224,26 @@ top1 = toplim
 If Done Then
 Sorted = False
        If ParentIndex > -1 Then
-            PriveSpace(ParentIndex).Pleft = PriveSpace(index).Pleft
+            PriveSpace(ParentIndex).Pleft = PriveSpace(Index).Pleft
 
         Else
         
-        Hash(PriveSpace(index).lastpos) = PriveSpace(index).Pleft
+        Hash(PriveSpace(Index).lastpos) = PriveSpace(Index).Pleft
 
         End If
-        If top1 = index Then
+        If top1 = Index Then
             PriveSpace(top1) = new_item
         Else
             SwapVariant vvv, PriveSpace(top1).iValue
-            PriveSpace(index).iValue = -1
-            PriveSpace(index) = PriveSpace(top1)
+            PriveSpace(Index).iValue = -1
+            PriveSpace(Index) = PriveSpace(top1)
             PriveSpace(top1) = new_item
-            SwapVariant vvv, PriveSpace(index).iValue
+            SwapVariant vvv, PriveSpace(Index).iValue
         End If
-        k = Hash(PriveSpace(index).lastpos) - 1
+        k = Hash(PriveSpace(Index).lastpos) - 1
         If k = top1 Then
             ' we have to give the new position to Hash()
-            Hash(PriveSpace(index).lastpos) = index + 1
+            Hash(PriveSpace(Index).lastpos) = Index + 1
         Else
             Do While k >= 0 And k <> top1 And k <> k1
                    k1 = k
@@ -252,7 +252,7 @@ Sorted = False
             If k = k1 Then
                ReHash
             ElseIf k = top1 Then
-               PriveSpace(k1).Pleft = index + 1
+               PriveSpace(k1).Pleft = Index + 1
             End If
         End If
   
@@ -301,7 +301,7 @@ top1 = toplim
 If Find2(RHS, Parndx, ndx) Then
         Sorted = False
         Done = True
-        index = ndx
+        Index = ndx
         ' here we make a clean to pointers to PriveSpace, so we exclude the removing item
         If Parndx > -1 Then
             ' if we have a parent then just push to parent the Pleft pointer
@@ -357,73 +357,73 @@ End Sub
 
 Property Let Value(RHS As Variant)
 Done = False
-If index = -1 Then
+If Index = -1 Then
 ItemCreator lastkey, RHS
 
 Else
-    PriveSpace(index).iValue = RHS
+    PriveSpace(Index).iValue = RHS
 End If
 Done = True
 End Property
 Property Set ValueObj(RHS As Variant)
 Done = False
-If index = -1 Then
+If Index = -1 Then
     ItemCreator lastkey, RHS
 Else
-    Set PriveSpace(index).iValue = RHS
+    Set PriveSpace(Index).iValue = RHS
 End If
 Done = True
 End Property
 Property Get sValue() As Long
 Done = False
-If index = -1 Then
+If Index = -1 Then
 Else
     Done = True
-    sValue = PriveSpace(index).sValue
+    sValue = PriveSpace(Index).sValue
 End If
 End Property
 Property Let sValue(RHS As Long)
-If index = -1 Then
+If Index = -1 Then
 Else
     Done = True
-    PriveSpace(index).sValue = RHS
+    PriveSpace(Index).sValue = RHS
 End If
 End Property
 Property Get KeyTypeValue() As Integer
 Done = False
-If index = -1 Then
+If Index = -1 Then
 Else
     Done = True
-    KeyTypeValue = PriveSpace(index).KeyType
+    KeyTypeValue = PriveSpace(Index).KeyType
 End If
 End Property
 Property Let KeyTypeValue(RHS As Integer)
-If index = -1 Then
+If Index = -1 Then
 Else
     Done = True
-    PriveSpace(index).KeyType = RHS
+    PriveSpace(Index).KeyType = RHS
 End If
 End Property
 
 Property Get Value() As Variant
 Done = False
-If index = -1 Then
-ElseIf Not IsObject(PriveSpace(index).iValue) Then
+If Index = -1 Then
+ElseIf Not IsObject(PriveSpace(Index).iValue) Then
     Done = True
-    Value = PriveSpace(index).iValue
+    Value = PriveSpace(Index).iValue
     
     If Typename(Value) = "Error" Then
     
     Value = MyVal()
-    If VarType(Value) = vbString Then Value = PriveSpace(index).Key
+    If VarType(Value) = vbString Then Value = PriveSpace(Index).Key
     
     End If
 End If
 End Property
 Private Function MyVal() As Variant
 On Error Resume Next
-MyVal = PriveSpace(index).Key
-Select Case PriveSpace(index).KeyType
+MyVal = PriveSpace(Index).Key
+Select Case PriveSpace(Index).KeyType
 Case vbString
 If MyVal Like "[-0-9.]*" Then
     MyVal = CDbl(Replace$(MyVal, ".", NowDec$))
@@ -444,12 +444,12 @@ End Function
 Function ValueType(ch As Long, p As Variant, s As String) As Boolean
 Done = False
 Dim val1 As Variant
-If index = -1 Then
+If Index = -1 Then
 ValueType = False
-ElseIf Not IsObject(PriveSpace(index).iValue) Then
+ElseIf Not IsObject(PriveSpace(Index).iValue) Then
 ValueType = True
     Done = True
-    val1 = PriveSpace(index).iValue
+    val1 = PriveSpace(Index).iValue
     If Typename(val1) = "Error" Then
         If ch = 2 Then
             s = KeyToString
@@ -471,9 +471,9 @@ End If
 End Function
 Property Get ValueObj() As Variant
 Done = False
-If index = -1 Then
-ElseIf IsObject(PriveSpace(index).iValue) Then
-    Set ValueObj = PriveSpace(index).iValue
+If Index = -1 Then
+ElseIf IsObject(PriveSpace(Index).iValue) Then
+    Set ValueObj = PriveSpace(Index).iValue
     Done = True
 End If
 
@@ -578,11 +578,11 @@ End Function
 Sub swap(key1, Key2)
 Dim k As Long, c As item
 If Find(key1) Then
-k = index
+k = Index
 If Find(Key2) Then
 
-    c = PriveSpace(k): PriveSpace(k) = PriveSpace(index): PriveSpace(index) = c
-    index = k
+    c = PriveSpace(k): PriveSpace(k) = PriveSpace(Index): PriveSpace(Index) = c
+    Index = k
     ReHash
     Sorted = False
 End If
@@ -591,9 +591,9 @@ End Sub
 Sub SwapValues(key1, Key2)
 Dim k As Long
 If Find(key1) Then
-k = index
+k = Index
 If Find(Key2) Then
-    SwapVariant PriveSpace(k).iValue, PriveSpace(index).iValue
+    SwapVariant PriveSpace(k).iValue, PriveSpace(Index).iValue
 End If
 End If
 End Sub
@@ -601,17 +601,17 @@ Sub SwapNext(key1)
 Dim k As Long
 On Error Resume Next
 If Done Then
-    k = index
+    k = Index
     If Find(key1) Then
-        SwapVariant PriveSpace(k).iValue, PriveSpace(index).iValue
+        SwapVariant PriveSpace(k).iValue, PriveSpace(Index).iValue
     End If
 End If
 End Sub
 Sub SwapByIndex(RHS As Long)
 On Error Resume Next
 If Done Then
-    SwapVariant PriveSpace(RHS).iValue, PriveSpace(index).iValue
-    index = RHS
+    SwapVariant PriveSpace(RHS).iValue, PriveSpace(Index).iValue
+    Index = RHS
 End If
 End Sub
 
@@ -641,19 +641,19 @@ Property Get LastKnown() As String
     LastKnown = lastfind
 End Property
 Function IsObj() As Boolean
-If index = -1 Then
+If Index = -1 Then
 Else
-IsObj = IsObject(PriveSpace(index).iValue)
+IsObj = IsObject(PriveSpace(Index).iValue)
 End If
 End Function
 Function IsEnum(p As Variant) As Boolean
-Dim obj As mHandler
-If index = -1 Then
-ElseIf IsObject(PriveSpace(index).iValue) Then
-If Typename(PriveSpace(index).iValue) = "mHandler" Then
-    Set obj = PriveSpace(index).iValue
-    IsEnum = obj.t1 = 4
-    If IsEnum Then p = obj.index_cursor * obj.sign
+Dim usehandler As mHandler
+If Index = -1 Then
+ElseIf IsObject(PriveSpace(Index).iValue) Then
+If Typename(PriveSpace(Index).iValue) = "mHandler" Then
+    Set usehandler = PriveSpace(Index).iValue
+    IsEnum = usehandler.t1 = 4
+    If IsEnum Then p = usehandler.index_cursor * usehandler.sign
 End If
 End If
 End Function
@@ -668,7 +668,7 @@ k = Hash(HashFunc(Key)) - 1
 k1 = -2
 If k >= 0 Then
 Do
-    If PriveSpace(k).Key = Key Then Find = True: lastfind = Key: index = k: Done = True: Exit Function
+    If PriveSpace(k).Key = Key Then Find = True: lastfind = Key: Index = k: Done = True: Exit Function
      ParentIndex = k
      k1 = k
      k = PriveSpace(k).Pleft - 1
@@ -680,7 +680,7 @@ k1 = -2
 ParentIndex = -1
 If k >= 0 Then
 Do
-    If PriveSpace(k).Key = Key Then Find = True: lastfind = Key: index = k: Done = True: Exit Function
+    If PriveSpace(k).Key = Key Then Find = True: lastfind = Key: Index = k: Done = True: Exit Function
      ParentIndex = k
      k1 = k
      k = PriveSpace(k).Pleft - 1
@@ -702,7 +702,7 @@ If k >= 0 Then
 Do
     If PriveSpace(k).Key = Key Then
         num = num + 1
-        If num = 0 Then FindOne = True: lastfind = Key: index = k: Done = True: Exit Function
+        If num = 0 Then FindOne = True: lastfind = Key: Index = k: Done = True: Exit Function
     End If
      ParentIndex = k
      k1 = k
@@ -717,7 +717,7 @@ If k >= 0 Then
 Do
     If PriveSpace(k).Key = Key Then
       num = num + 1
-        If num = 0 Then FindOne = True: lastfind = Key: index = k: Done = True: Exit Function
+        If num = 0 Then FindOne = True: lastfind = Key: Index = k: Done = True: Exit Function
     End If
      ParentIndex = k
      k1 = k
@@ -767,7 +767,7 @@ k = Hash(HashFunc(Key)) - 1
 k1 = -2
 If k >= 0 Then
     Do
-        If PriveSpace(k).Key = Key Then ExistKey0 = True: index = k: Exit Function
+        If PriveSpace(k).Key = Key Then ExistKey0 = True: Index = k: Exit Function
         k1 = k
         k = PriveSpace(k).Pleft - 1
     Loop Until k < 0 Or k1 = k
@@ -777,7 +777,7 @@ If k >= 0 Then
         k1 = -2
         If k >= 0 Then
         Do
-            If PriveSpace(k).Key = Key Then ExistKey0 = True: index = k: Exit Function
+            If PriveSpace(k).Key = Key Then ExistKey0 = True: Index = k: Exit Function
             k1 = k
             k = PriveSpace(k).Pleft - 1
         Loop Until k < 0 Or k1 = k
@@ -793,7 +793,7 @@ k = Hash(HashFunc(Key)) - 1
 k1 = -2
 If k >= 0 Then
     Do
-        If PriveSpace(k).Key = Key Then ExistKey = True: index = k: Exit Function
+        If PriveSpace(k).Key = Key Then ExistKey = True: Index = k: Exit Function
         k1 = k
         k = PriveSpace(k).Pleft - 1
         
@@ -803,7 +803,7 @@ If k >= 0 Then
         k = Hash(HashFunc(Key)) - 1
         If k >= 0 Then
         Do
-            If PriveSpace(k).Key = Key Then ExistKey = True: index = k: Exit Function
+            If PriveSpace(k).Key = Key Then ExistKey = True: Index = k: Exit Function
             k1 = k
             k = PriveSpace(k).Pleft - 1
         Loop Until k < 0 Or k = k1
@@ -883,7 +883,7 @@ End With
 
 place HashFunc1(kk), a
 
-index = a
+Index = a
 Done = True
 End Sub
 Friend Sub ItemCreator2(Key As String, nValue As Long, dvalue As Long)
@@ -901,7 +901,7 @@ With PriveSpace(a)
     .firsthash = kk
 End With
 place HashFunc1(kk), a
-index = -1
+Index = -1
 End Sub
 Property Get Percent()
 Percent = 100 * count / hashlen
@@ -946,76 +946,76 @@ Public Property Get ReferCount() As Long
 ReferCount = GetRefCount(Me)
 End Property
 Public Property Get KeyToString2() As Variant
-If index > -1 Then
+If Index > -1 Then
 
-    KeyToString2 = PriveSpace(index).Key + Str$(PriveSpace(index).lastpos < toplim) + Str$(PriveSpace(index).Pleft) ' + Str$(Int(Percent * 1000) / 100) + Str$(hashlen) + Str$(count)
+    KeyToString2 = PriveSpace(Index).Key + Str$(PriveSpace(Index).lastpos < toplim) + Str$(PriveSpace(Index).Pleft) ' + Str$(Int(Percent * 1000) / 100) + Str$(hashlen) + Str$(count)
 End If
 End Property
 Public Property Get KeyToString() As Variant
-If index > -1 Then
+If Index > -1 Then
 
-    KeyToString = PriveSpace(index).Key
+    KeyToString = PriveSpace(Index).Key
 End If
 End Property
 Public Property Get HassKeyNumberPart() As Variant
-If index > -1 Then
-HassKeyNumberPart = Left$(PriveSpace(index).Key, 1) Like "[-0-9.]*"
+If Index > -1 Then
+HassKeyNumberPart = Left$(PriveSpace(Index).Key, 1) Like "[-0-9.]*"
 End If
 End Property
 Public Property Get KeyToNumber() As Variant
-If index > -1 Then
+If Index > -1 Then
     KeyToNumber = MyVal()
     If VarType(KeyToNumber) = vbString Then KeyToNumber = CDbl(0)
 End If
 End Property
 Public Property Get ReferCountValue() As Long
-If index = -1 Then
-ElseIf IsObject(PriveSpace(index).iValue) Then
-    ReferCountValue = GetRefCount(PriveSpace(index).iValue)
+If Index = -1 Then
+ElseIf IsObject(PriveSpace(Index).iValue) Then
+    ReferCountValue = GetRefCount(PriveSpace(Index).iValue)
 End If
 End Property
 Public Sub ToStart()
-index = 0
+Index = 0
 Done = count > 0
 End Sub
 Public Sub ToEnd()
-index = count - 1
+Index = count - 1
 Done = count > 0
 End Sub
 
 Public Sub NextIndex()
 Done = False
-    If index = -1 Then
+    If Index = -1 Then
  
     Else
-        If index < toplim Then Done = True: index = index + 1
+        If Index < toplim Then Done = True: Index = Index + 1
     End If
 
 End Sub
 Public Function ToNextIndex()
 Done = False
-    If index = -1 Then
+    If Index = -1 Then
  
     Else
-        If index < toplim Then Done = True: index = index + 1
+        If Index < toplim Then Done = True: Index = Index + 1
     End If
     ToNextIndex = Done
 End Function
 Public Sub PrevIndex()
 Done = False
-    If index = -1 Then
+    If Index = -1 Then
     
     Else
-        If index > 0 Then Done = True: index = index - 1
+        If Index > 0 Then Done = True: Index = Index - 1
     End If
 
 End Sub
 Public Function ToPrevIndex()
 Done = False
-    If index = -1 Then
+    If Index = -1 Then
     
     Else
-        If index > 0 Then Done = True: index = index - 1
+        If Index > 0 Then Done = True: Index = Index - 1
     End If
     ToPrevIndex = Done
 End Function
@@ -1472,9 +1472,9 @@ Public Property Get KeyToString3(there As Long) As String
 
 End Property
 
-Private Function IsNumberD2(a$, d As Variant) As Boolean
+Private Function IsNumberD2(a$, D As Variant) As Boolean
 ' for inline stacitems
-If VarType(d) = vbEmpty Then d = 0#
+If VarType(D) = vbEmpty Then D = 0#
 Dim a1 As Long
 If a$ <> "" Then
 For a1 = 1 To Len(a$) + 1
@@ -1487,7 +1487,7 @@ Exit For
 End Select
 Next a1
 If a1 > Len(a$) Then a1 = Len(a$) + 1
-    If IsNumberOnly(a$, 1, d, a1) Then
+    If IsNumberOnly(a$, 1, D, a1) Then
         a$ = Mid$(a$, a1)
         IsNumberD2 = True
     Else
@@ -1498,7 +1498,7 @@ Else
 End If
 
 End Function
-Private Function IsNumberOnly(a$, fr As Long, r As Variant, lr As Long) As Boolean
+Private Function IsNumberOnly(a$, fr As Long, R As Variant, lr As Long) As Boolean
 Dim SG As Long, sng As Long, n$, ig$, DE$, sg1 As Long, ex$   ', e$
 ' ti kanei to e$
 If a$ = vbNullString Then IsNumberOnly = False: Exit Function
@@ -1591,17 +1591,17 @@ Else
             On Error Resume Next
             If Len(DE$) > 0 Then
                 Mid$(DE$, 1, 1) = cdecimaldot$
-                r = CDec(ig$ & DE$)
+                R = CDec(ig$ & DE$)
             Else
-                r = CDec(ig$)
+                R = CDec(ig$)
             End If
             If Err.Number = 6 Then
-                r = CDbl(ig$ & DE$)
+                R = CDbl(ig$ & DE$)
             End If
          Else
-            r = val(ig$ & DE$ & ex$)
+            R = val(ig$ & DE$ & ex$)
              If Err.Number > 0 Then
-             Err.clear
+             Err.Clear
              IsNumberOnly = False
              End If
 
